# zcash-price-ticker-kde6-widget

./: CMakeLists.txt  build_install.sh  metadata.json
contents/ui/: main.qml
src/: CMakeLists.txt  priceticker.cpp  priceticker.h
